-
Type:
Bug
-
Status: Resolved
-
Priority:
Critical
-
Resolution: Fixed
-
Component/s: Win32SS
-
Labels:
-
Guilty Revision:73,532
I can make this happen in 0.4.6rc1 gcc dbg and trunk 75707 gcc dbg.
I just start the game POP2 via NTVDM (which immediately exits - this has never been different in the past)
But what happens then is a really bad thing:
The black NTVDM window is still visible when Win32K plays two iterations 'Looping Louie' and then we run into a full
NTOSKRNL Work Queue Deadlock detected
I can not interact with the system any longer.
Not even ACPI-shutdown works at this point anymore.
I can make this happen with at least 4 of 5tries.
r75707.log
I waited 18minutes in the hope it would break into debugger automatically maybe, but it didn't.
I tested: this is a regression: r73532 is guilty/unhider
- is duplicated by
-
CORE-14341 Random "zombie" + "EX: Work Queue Deadlock detected: 1" + "timeout", after end of "Wine Test > zz_dosbox_0.72 > 2.intro" on AHK testbot
-
- Resolved
-
- relates to
-
CORE-14763 "kernel32 : ConsoleCP": permanent timeout on Test KVM, since 0a8cd95
-
- Resolved
-
- links to