[0.4.7] Port back fix for 'deadlock when exiting command.com or NTVDM' CORE-13734

squashed 2 excellent fixes from Thomas Faber to fight that regression which
started to become visible for me after SVN r73532 == git
6d7fcc4bab7fdb57f3e7dc065c1764405f01e8fe

----------------------------
[0.4.7][NTOS:EX] Worker threads must not exit with a critical region held. CORE-13734

cherry picked from commit 0.4.9-dev-146-g
2b8f4f6e244dcd83875564f72d8320c687a3a240
----------------------------
[0.4.7][WINSRV] Don't try to remove messages from the queue without dispatching them. CORE-13734

This partially reverts r58615 / 01729482ae.

cherry picked from commit 0.4.9-dev-148-g
3159de5573e3836e31241cc87724f1d3d1f8daf0